--- a/c9hubdashboard/templates/index.html
+++ b/c9hubdashboard/templates/index.html
@@ -27,7 +27,7 @@
 	      <form method="POST" action="/" class="form-horizontal">
 		{{ form.hidden_tag() }}
 		<fieldset>
-		  <legend><i class="icon icon-material-add-box"></i> Spawn an new IDE</legend>
+		  <legend><i class="icon icon-material-add-box"></i> Spawn a new IDE</legend>
 		  <div class="form-group">
 		    {{ form.display_name.label(for="display_name", class_="col-lg-2 control-label") }}
 		    <div class="col-lg-10">
