--- a/c9hubdashboard/templates/waitingroom.html
+++ b/c9hubdashboard/templates/waitingroom.html
@@ -5,7 +5,7 @@
       <div class="row">
 	<div class="col-lg-12">
 	  <div class="well">
-	    <p>Your IDE is in construction. The time required is dependant on the cloned git repositories.</p>
+	    <p>Your IDE is in construction. The time required depends on the cloned git repositories.</p>
 	    <p>You can access your IDE with the link:</p>
 	    <a href="{{ target }}" class="btn btn-success btn-fab btn-raised icon-material-exit-to-app withripple"><div class="ripple-wrapper"></div></a>&nbsp;
 	    <a href="{{ target }}" class="lead">{{ target }}</a>
