--- a/c9hubdashboard/templates/index.html
+++ b/c9hubdashboard/templates/index.html
@@ -1,6 +1,36 @@
 {% extends "layout.html" %}
+{% macro class_with_errors(field, classes) %}
+  {% if field.errors %}
+    {{ classes }} has-error
+  {% else %}
+    {{classes }}
+  {% endif %}
+{% endmacro %}
+{% macro with_errors(field) %}
+    {% if field.errors %}
+        {{ field(**kwargs) }}
+        {% for error in field.errors %}<p class="text-danger">{{ error|e }}</p>{% endfor %}
+        <!-- <ul class="errors">{% for error in field.errors %}<li>{{ error|e }}</li>{% endfor %}</ul> -->
+    {% else %}
+        {{ field(**kwargs) }}
+    {% endif %}
+{% endmacro %}
 {% block title %}Index{% endblock %}
 {% block section %}
+    <script type="text/javascript">
+	$(document).ready(function(){
+	  $(function() {
+	    if (! $("#setup_cf").prop('checked')) {
+	      enable_cb();
+	    }
+	    $("#setup_cf").click(enable_cb);
+	  });
+
+          function enable_cb() {
+            $("input.setup_cf").prop("disabled", !this.checked);
+	  }
+	});
+    </script>
     <div class="bs-docs-section">
       <div class="row">
 	<div class="col-lg-11">
@@ -9,10 +39,10 @@
 	      {{ form.hidden_tag() }}
 	      <fieldset>
 		<legend><i class="icon icon-material-add-box"></i> Spawn a new IDE</legend>
-		<div class="form-group">
+		<div class="{{class_with_errors(form.display_name, 'form-group')}}">
 		  {{ form.display_name.label(for="display_name", class_="col-lg-2 control-label") }}
 		  <div class="col-lg-10">
-		    {{ form.display_name(size=64, maxlength=64, class_="form-control", placeholder="Choose a name for your IDE") }}
+		    {{  with_errors(form.display_name, size=64, maxlength=64, class_="form-control", placeholder="Choose a name for your IDE") }}
 		  </div>
 		</div>
 		<div class="form-group">
@@ -22,13 +52,59 @@
 		    <span class="help-block">The IDE will be destroyed when this time limit is reached</span>
 		  </div>
 		</div>
-		<div class="form-group">
+		<div class="{{class_with_errors(form.git_clones, 'form-group')}}">
 		  {{ form.git_clones.label(for="git_clones", class_="col-lg-2 control-label") }}
 		  <div class="col-lg-10">
-		    {{ form.git_clones(size=64, class_="form-control", placeholder="Add some public git repositories's urls") }}
+		    {{ with_errors(form.git_clones, size=64, class_="form-control", placeholder="Add some public git repositories's urls") }}
 		    <span class="help-block">This field can be empty. A local git clone will be created automatically for every url, thus populating your workspace. Additional clones can still be added afterwards through the IDE's tools.</span>
 		  </div>
 		</div>
+		<div class="form-group">
+		  <div class="col-lg-offset-2 col-lg-10">
+		      <div class="checkbox">
+			<label>{{ form.setup_cf(class_="bs-material") }}
+		    	  <span class="check"></span>Setup CloudFoundry login
+			</label>
+		      </div>
+		    <br />
+		    <div class="{{class_with_errors(form.cf_api_endpoint, 'form-group')}}">
+		      {{ form.cf_api_endpoint.label(for="cf_api_endpoint", class_="col-lg-2 control-label") }}
+		      <div class="col-lg-10">
+			{{ with_errors(form.cf_api_endpoint, size=64, class_="setup_cf form-control floating-label",
+			placeholder="The url of the CloudFoundry User Account and Authentication (UAA) server") }}
+		      </div>
+		    </div>
+		    <div class="{{class_with_errors(form.cf_username, 'form-group')}}">
+		      {{ form.cf_username.label(for="cf_username", class_="col-lg-2 control-label") }}
+		      <div class="col-lg-10">
+			{{ with_errors(form.cf_username, size=64, class_="setup_cf form-control floating-label",
+			placeholder="A CloudFoundry username") }}
+		      </div>
+		    </div>
+		    <div class="{{class_with_errors(form.cf_password, 'form-group')}}">
+		      {{ form.cf_password.label(for="cf_username", class_="col-lg-2 control-label") }}
+		      <div class="col-lg-10">
+			{{ with_errors(form.cf_password, size=64, class_="setup_cf form-control floating-label",
+			placeholder="A CloudFoundry password") }}
+		      </div>
+		    </div>
+		    <div class="{{class_with_errors(form.cf_org, 'form-group')}}">
+		      {{ form.cf_org.label(for="cf_org", class_="col-lg-2 control-label") }}
+		      <div class="col-lg-10">
+			{{ with_errors(form.cf_org, size=64, class_="setup_cf form-control floating-label",
+			placeholder="A CloudFoundry Organization") }}
+		      </div>
+		    </div>
+		    <div class="{{class_with_errors(form.cf_spc, 'form-group')}}">
+		      {{ form.cf_spc.label(for="cf_spc", class_="col-lg-2 control-label") }}
+		      <div class="col-lg-10">
+			{{ with_errors(form.cf_spc, size=64, class_="setup_cf form-control floating-label",
+			placeholder="A CloudFoundry Space") }}
+		      </div>
+		    </div>
+		  </div>
+		</div>
+		
 		<div class="form-group">
 		  <div class="col-lg-10 col-lg-offset-2">
 		    <button class="btn btn-default">Cancel</button>
