--- a/c9hubdashboard/templates/layout.html
+++ b/c9hubdashboard/templates/layout.html
@@ -32,7 +32,7 @@
 	  {% endfor %}
         </ul>
 	<ul class="nav navbar-nav navbar-right">
-          <li><a href="https://www.thalesgroup.com">by TAI</a></li>
+          <li><a href="https://www.tai.tai">by TAI</a></li>
 	</ul>
       </div>
     </div>
